# splathash

./: .gitignore  .releaserc.json  ALGORITHM.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  package-lock.json  package.json
.github/: copilot-instructions.md
.github/skills/refactor/: SKILL.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: main.ts  style.css
src/go/: README.md  benchmark_test.go  go.mod  go.sum  helpers_test.go  splathash.go  splathash_test.go  visual_test.go
src/go/cmd/preview/: main.go
src/go/examples/simple/: main.go
src/py/: README.md  example.py  pyproject.toml  splathash.py  test_splathash.py
src/ts/: README.md  package-lock.json  package.json  tsconfig.json
src/ts/examples/: simple.ts
src/ts/src/: index.ts  splathash.ts
src/ts/test/: test.ts
