[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "splathash-py"
version = "1.2.0"
description = "SplatHash: compress any image to 16 bytes and reconstruct it"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["Pillow>=9.0"]
keywords = ["image", "hash", "perceptual", "thumbnail", "blurhash", "thumbhash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/junevm/splathash"
Repository = "https://github.com/junevm/splathash"
"Bug Tracker" = "https://github.com/junevm/splathash/issues"

[tool.setuptools]
py-modules = ["splathash"]
